--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "orange-home",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nuevo94.gq",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
@@ -12,7 +13,7 @@
     "@testing-library/user-event": "^12.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.0"
   },
@@ -21,7 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "surge ./build https://inquisitive-furniture.surge.sh/"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "deploy-surge": "surge ./build https://inquisitive-furniture.surge.sh/"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
