--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "deploy-surge": "surge ./build https://inquisitive-furniture.surge.sh/"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
